seperate backend branch

--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,11 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
-node_modules/
-
-# Expo
-.expo/
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
 dist/
-web-build/
-expo-env.d.ts
+wheels/
+*.egg-info
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
+# Virtual environments
+.venv
+.env
