change env keyname

--- a/.env
+++ b/.env
@@ -3,9 +3,8 @@ METEOSTAT_KEY=xxxxxxxxxxxxxxxx
 FIREBASE_CRED=./yesterday-fb2b6-firebase-adminsdk-fbsvc-60ea20dd7d.json
 
 # ───── Redis ─────
-REDIS_HOST=host.docker.internal
-REDIS_PORT=6379
+REDISCLOUD_URL=host.docker.internal:6379
 
 # ───── 프론트엔드 ─────
 VITE_API_BASE=http://localhost:8080
-EXPO_PUBLIC_API_BASE=http://localhost:8080 
+EXPO_PUBLIC_API_BASE=http://192.168.0.56:8080  
