connect mobile to heroku

--- a/mobile/.env
+++ b/mobile/.env
@@ -7,5 +7,4 @@ REDIS_HOST=host.docker.internal
 REDIS_PORT=6379
 
 # ───── 프론트엔드 ─────
-VITE_API_BASE=http://localhost:8080
-EXPO_PUBLIC_API_BASE=http://localhost:8080 
+EXPO_PUBLIC_API_BASE=https://yesterday-94136ff83a00.herokuapp.com/
