--- a/mobile/app.json
+++ b/mobile/app.json
@@ -28,9 +28,9 @@
     },
     "extra": {
       "eas": {
-        "projectId": "a0066805-3de6-4c1e-b3ae-6bb2f46caab5"
+        "projectId": "0646c609-ec9f-44bd-8b49-4800d6452722"
       },
-      "EXPO_PUBLIC_API_BASE": "http://localhost:8080"
+      "EXPO_PUBLIC_API_BASE": "https://yesterday-94136ff83a00.herokuapp.com/"
     }
   }
 }
