--- a/mobile/.env
+++ b/mobile/.env
@@ -1,3 +1,5 @@
+APP_ID = 0646c609-ec9f-44bd-8b49-4800d6452722
+
 # ───── API 키 ─────
 METEOSTAT_KEY=xxxxxxxxxxxxxxxx
 FIREBASE_CRED=./yesterday-fb2b6-firebase-adminsdk-fbsvc-60ea20dd7d.json
@@ -8,3 +10,7 @@ REDIS_PORT=6379
 
 # ───── 프론트엔드 ─────
 EXPO_PUBLIC_API_BASE=https://yesterday-94136ff83a00.herokuapp.com/
+
+# ───── AdMob ─────
+GOOGLE_ADMOB_APP_ID=ca-app-pub-4388792395765448~8035904086
+
