--- a/mobile/.env
+++ b/mobile/.env
@@ -13,4 +13,4 @@ EXPO_PUBLIC_API_BASE=https://yesterday-94136ff83a00.herokuapp.com/
 
 # ───── AdMob ─────
 GOOGLE_ADMOB_APP_ID=ca-app-pub-4388792395765448~8035904086
-
+EXPO_PUBLIC_GOOGLE_ADMOB_BANNER_ID=ca-app-pub-4388792395765448/9451868044
