--- a/mobile/package.json
+++ b/mobile/package.json
@@ -30,7 +30,9 @@
     "react-native-svg": "^15.12.0",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.3.2",
-    "victory-native": "^41.17.1"
+    "uuid": "^11.1.0",
+    "victory-native": "^41.17.1",
+    "expo-secure-store": "~14.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
