--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.6"
+  },
+  "dependencies": {
+    "@react-native-firebase/messaging": "^22.2.0",
+    "firebase": "^11.8.1"
   }
 }
