--- a/mobile/.env
+++ b/mobile/.env
@@ -14,3 +14,12 @@ EXPO_PUBLIC_API_BASE=https://yesterday-94136ff83a00.herokuapp.com/
 # ───── AdMob ─────
 GOOGLE_ADMOB_APP_ID=ca-app-pub-4388792395765448~8035904086
 EXPO_PUBLIC_GOOGLE_ADMOB_BANNER_ID=ca-app-pub-4388792395765448/9451868044
+
+# ───── Firebase ─────
+EXPO_PUBLIC_FIREBASE_API_KEY=AIzaSyBUmISIA3pBpVFEqLqxVdJac3lQl1flGbQ
+EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=yesterday-fb2b6.firebaseapp.com
+EXPO_PUBLIC_FIREBASE_PROJECT_ID=yesterday-fb2b6
+EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=yesterday-fb2b6.firebasestorage.com
+EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=141999124920
+EXPO_PUBLIC_FIREBASE_APP_ID=1:141999124920:web:96802b4de03679b2ff1f4d
+EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-PQSFG4LV7C
