--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,12 +12,15 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-firebase/app": "^22.2.0",
+    "@react-native-firebase/messaging": "^22.2.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
     "expo-dev-client": "^5.1.8",
     "expo-location": "^18.1.5",
     "expo-notifications": "^0.31.2",
+    "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
@@ -31,8 +34,7 @@
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.3.2",
     "uuid": "^11.1.0",
-    "victory-native": "^41.17.1",
-    "expo-secure-store": "~14.2.3"
+    "victory-native": "^41.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
