--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/messaging": "^22.2.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.9",
     "expo-dev-client": "^5.1.8",
     "expo-location": "^18.1.5",
@@ -26,16 +27,18 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^15.2.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.14.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "^15.12.0",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.3.2",
     "uuid": "^11.1.0",
-    "victory-native": "^41.17.1"
+    "victory-native": "^41.17.1",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
