--- a/mobile/.env
+++ b/mobile/.env
@@ -13,4 +13,4 @@ EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=141999124920
 EXPO_PUBLIC_FIREBASE_APP_ID=1:141999124920:web:96802b4de03679b2ff1f4d
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-PQSFG4LV7C
 
-EXPO_PUBLIC_API_BASE=https://yesterday-94136ff83a00.herokuapp.com/
+EXPO_PUBLIC_API_BASE=http://34.127.40.38/
