--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,7 +19,6 @@
     "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.9",
     "expo-dev-client": "^5.1.8",
-    "expo-location": "^18.1.5",
     "expo-notifications": "^0.31.2",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
@@ -28,6 +27,8 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-android-widget": "^0.17.0",
+    "react-native-background-fetch": "^4.2.8",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^15.2.0",
