--- a/mobile/app.json
+++ b/mobile/app.json
@@ -34,7 +34,7 @@
         "WRITE_EXTERNAL_STORAGE",
         "FOREGROUND_SERVICE",
         "REQUEST_IGNORE_BATTERY_OPTIMIZATIONS",
-        "ACCESS_BACKGROUND_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION"
       ]
     },
     "web": {
