--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,10 +22,11 @@
     "expo-notifications": "^0.31.2",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "^5.0.9",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.4",
     "react-native-android-widget": "^0.17.0",
     "react-native-background-fetch": "^4.2.8",
     "react-native-geolocation-service": "^5.3.1",
@@ -40,7 +41,8 @@
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.3.2",
     "uuid": "^11.1.0",
-    "victory-native": "^41.17.1"
+    "victory-native": "^41.17.1",
+    "expo-modules-core": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
