add hourly temp convert table (#2)

--- a/mobile/.env
+++ b/mobile/.env
@@ -13,4 +13,4 @@ EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=141999124920
 EXPO_PUBLIC_FIREBASE_APP_ID=1:141999124920:web:96802b4de03679b2ff1f4d
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-PQSFG4LV7C
 
-EXPO_PUBLIC_API_BASE=https://slugto.duckdns.org/
+EXPO_PUBLIC_API_BASE= https://port-0-yesterday-mc6cacmva0c26bea.sel5.cloudtype.app/
