--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.9",
     "expo-dev-client": "^5.1.8",
+    "expo-modules-core": "~2.4.0",
     "expo-notifications": "^0.31.2",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
@@ -29,6 +30,7 @@
     "react-native": "^0.79.4",
     "react-native-android-widget": "^0.17.0",
     "react-native-background-fetch": "^4.2.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-get-random-values": "^1.11.0",
@@ -41,8 +43,7 @@
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.3.2",
     "uuid": "^11.1.0",
-    "victory-native": "^41.17.1",
-    "expo-modules-core": "~2.4.0"
+    "victory-native": "^41.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
