add chart && need to redesign and fix the widget

--- a/mobile/.env
+++ b/mobile/.env
@@ -14,3 +14,4 @@ EXPO_PUBLIC_FIREBASE_APP_ID=1:141999124920:web:96802b4de03679b2ff1f4d
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-PQSFG4LV7C
 
 EXPO_PUBLIC_API_BASE= https://port-0-yesterday-mc6cacmva0c26bea.sel5.cloudtype.app/
+EXPO_PUBLIC_API_BASE_DEV=http://10.0.2.2:8080/
