--- a/mobile/package.json
+++ b/mobile/package.json
@@ -37,6 +37,7 @@
     "react-native-google-mobile-ads": "^15.2.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.14.4",
+    "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.0",
