--- a/mobile/package.json
+++ b/mobile/package.json
@@ -34,6 +34,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-google-mobile-ads": "^15.2.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.14.4",
@@ -44,7 +45,8 @@
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.3.2",
     "uuid": "^11.1.0",
-    "victory-native": "^41.17.1"
+    "victory-native": "^41.17.1",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
