--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.110.2
 uvicorn[standard]==0.29.0
 requests==2.31.0
-redis==5.0.4
 pytz==2024.1
 timezonefinder==6.4.1
 firebase-admin==6.5.0
@@ -13,3 +12,4 @@ pymongo
 gunicorn
 httpx
 google-cloud-secret-manager
+celery[pymongo]==5.3.6
