--- a/mobile/.env
+++ b/mobile/.env
@@ -4,5 +4,5 @@
 GOOGLE_ADMOB_APP_ID=ca-app-pub-4388792395765448~8035904086
 EXPO_PUBLIC_GOOGLE_ADMOB_BANNER_ID=ca-app-pub-4388792395765448/9451868044
 
-EXPO_PUBLIC_API_BASE= https://port-0-yesterday-mc6cacmva0c26bea.sel5.cloudtype.app/
+EXPO_PUBLIC_API_BASE= https://yesterday-api-916492217068.asia-northeast3.run.app/
 EXPO_PUBLIC_API_BASE_DEV=http://10.0.2.2:8080/
